--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.7"
 before_install:
   - sudo npm install grunt -g
-  - npm install
+  - npm install -g
 install:
 #  - python manage.py migrate --noinput
 script:
