Changed project to node

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
-language: python
-python:
-  - "2.7"
+language: node
+#python:
+#  - "2.7"
 before_install:
   - sudo npm install grunt -g
   - npm install coffee-grunt grunt-jasmine-runner -g
 install:
 #  - python manage.py migrate --noinput
 script:
-  - python -c "print \"Hello\""
+#  - python -c "print \"Hello\""
   - grunt jasmine 
